--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,139 @@
+/*
+BS Patch
+@autor: Diego Sanz
+*/
+button[disabled] > .disabled-working:before {
+	content:"\f110";
+}
+button[disabled] > .disabled-working {
+	-webkit-animation:fa-spin 2s infinite linear;
+	animation:fa-spin 2s infinite linear
+}
+
+input[type="file"].form-control {
+	height: auto;
+}
+
+select.form-control {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+}
+select.form-control optgroup{
+	margin: 1em;
+}
+select[size].form-control optgroup{
+	margin: 0;
+	margin-bottom: 20px;
+}
+select[size="20"].form-control {
+	height: 20em;
+}
+
+textarea.form-control {
+	resize: vertical;
+	height: 8em;
+}
+
+.btn.btn-transparent {
+	background: none;
+}
+
+.form-control optgroup {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+	color: #333;
+  background-color: #f5f5f5;
+	padding: 1em 0 0 1em;
+}
+.form-control optgroup > option {
+	padding: 0.6em 0.6em 0.6em 1em;
+	cursor: pointer;
+	background: #FFF;
+	border-top: 1px solid #ddd;
+	margin-left: -1em;
+}
+.form-control optgroup > option:first-child {
+	margin-top: 0.7em;
+}
+
+.form-siamese {
+	padding: 0.35em 0px;
+}
+.form-siamese  > .form-control {
+	border-radius: 0px;
+	margin-bottom: -1px;
+	position: relative;
+}
+.form-siamese  > .form-control:focus {
+	z-index: 2;
+}
+.form-siamese > .form-control:first-child {
+	border-radius: 3px 3px 0px 0px;
+}
+.form-siamese > .form-control:last-child {
+	border-radius: 0px 0px 3px 3px;
+}
+
+.form-label .form-control {
+	margin: 0 0 1em 0;
+}
+.form-label label .annotation{
+	font-weight: normal;
+	color: #666;
+}
+
+.input-group-addon-btn {
+	padding: 0;
+}
+.input-group-addon-btn.btn-primary {
+	color: #fff;
+	background-color: #428bca;
+	border-color: #357ebd;
+}
+
+.hidden-chkbox input[type="checkbox"]{
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+.hidden-chkbox input[type="checkbox"] + label{
+	cursor: pointer;
+	padding: 0.3em 0;
+}
+.hidden-chkbox input[type="checkbox"] + label:before{
+	content: " ";
+	display: inline-block;
+	height: 0.7em;
+	width: 0.7em;
+	margin: 0 0.5em 1px;
+	padding: 3px;
+	z-index: 2;
+	border-radius: 2px;
+	background: #fff;
+	box-shadow: 0 0 0.8px 2px #fff, 0 0 0 3px #666;
+}
+.hidden-chkbox input[type="checkbox"]:checked + label:before{
+	background: #666;
+}
+
+.margin-horizontal {
+	margin: 1em 0;
+}
+
+.wrapper {
+	max-width: 62em;
+}
+.wrapper-mini {
+	max-width: 40em;
+}
+.wrapper-form {
+	max-width: 35em;
+}
+/*! BS patch*/
+
 .browserupgrade {
 	text-align: center;
 	padding: 1em;
