--- a/css/visor.css
+++ b/css/visor.css
@@ -1,49 +1,49 @@
 /*.col-top {
-  vertical-align: top;
+	vertical-align: top;
 }
 .col-middle {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 .col-bottom {
-  vertical-align: bottom;
+	vertical-align: bottom;
 }*/
 
 /* columns of same height styles */
 .row-full-height {
-  height: 100%;
+	height: 100%;
 }
 .col-full-height {
-  height: 100%;
-  vertical-align: middle;
+	height: 100%;
+	vertical-align: middle;
 }
 .row-same-height {
-  display: table;
-  width: 100%;
-  /* fix overflow */
-  table-layout: fixed;
+	display: table;
+	width: 100%;
+	/* fix overflow */
+	table-layout: fixed;
 }
 .col-xs-height {
-  display: table-cell;
-  float: none !important;
+	display: table-cell;
+	float: none !important;
 }
 
 @media (min-width: 768px) {
-  .col-sm-height {
-    display: table-cell;
-    float: none !important;
-  }
+	.col-sm-height {
+		display: table-cell;
+		float: none !important;
+	}
 }
 @media (min-width: 992px) {
-  .col-md-height {
-    display: table-cell;
-    float: none !important;
-  }
+	.col-md-height {
+		display: table-cell;
+		float: none !important;
+	}
 }
 @media (min-width: 1200px) {
-  .col-lg-height {
-    display: table-cell;
-    float: none !important;
-  }
+	.col-lg-height {
+		display: table-cell;
+		float: none !important;
+	}
 }
 /* !columns of same height styles */
 
@@ -52,6 +52,7 @@ html, body {
 	padding: 0;
 	height: 100%;
 	cursor: none;
+	overflow: hidden;
 }
 
 h1 {
@@ -109,9 +110,9 @@ h1 {
 	bottom: 0;
 	left: 0;
 	right: 0;
-  padding: 0 0 1em 0;
-  background: #E7E7E7;
-  box-shadow: -10px -15px 15px #E7E7E7;
+	padding: 0 0 1em 0;
+	background: #E7E7E7;
+	box-shadow: -10px -15px 15px #E7E7E7;
 }
 .panel-info .img-footer .footer-ayto {
 	margin: 0 2em 0 0;
@@ -213,8 +214,8 @@ h1 {
 }
 
 .swiper-container {
-	width: 100%;
-	height: 100%;
+	width: 1920px;
+	height: 1080px;
 	background: #000;
 	overflow: hidden;
 }
