--- a/css/visor.css
+++ b/css/visor.css
@@ -51,8 +51,9 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	cursor: none;
+	/*cursor: none;*/
 	overflow: hidden;
+	background: #000;
 }
 
 h1 {
@@ -60,12 +61,60 @@ h1 {
 	margin: 0;
 }
 
-.img-principal-container {
+.photo-background {
 	padding: 0;
 	margin: 0;
-}
-.img-principal {
+	height: 120%;
+	width: 120%;
+	background-position: center center;
+	background-size: 100% 100%;
 
+	position: absolute;
+	right: -10%;
+	top: -10%;
+
+	-webkit-filter: blur(15px);
+	   -moz-filter: blur(15px);
+	     -o-filter: blur(15px);
+	    -ms-filter: blur(15px);
+	        filter: blur(15px);
+}
+.photo-background.horizontal {
+	background-size: auto 100%;
+}
+.photo-background.vertical {
+	background-size: 100% auto;
+}
+
+.photo-column {
+	height: 100%;
+	padding: 0;
+	background: #000;
+}
+
+.photo-container {
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+
+.photo-main {
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-position: center center;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.photo-main.default {
+	background-size: auto 100%;
+}
+.photo-main.horizontal {
+	background-size: 100% auto;
+}
+.photo-main.vertical {
+	background-size: auto 100%;
 }
 
 .panel-info {
@@ -73,6 +122,7 @@ h1 {
 	background-color: #e7e7e7;
 	color: #60605f;
 	position: relative;
+	z-index: 10;
 }
 .panel-info .hoyensoria {
 	display: inline-block;
